# micro_shop_fast_api

./: .gitignore  README.md  crud.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_09_25_1114-d17331935563_create_products_table.py  2025_09_26_0159-13f9b9167456_create_products_table.py  2025_09_26_0201-321418aa6e22_create_users_table.py  2025_09_26_0209-20d2e3dbe442_create_posts_table.py  2025_09_26_0250-367686949605_create_profile_table.py  2025_10_04_0156-d6b9d970406c_create_orders_table.py  2025_10_09_0034-9507ee021037_create_order_product_association.py  2025_10_10_0201-c478352247aa_add_count_column.py  2025_10_14_0036-9846fc362c69_add_unit_price_to_order_product_.py
api_v1/: __init__.py
api_v1/demo_auth/: views.py
api_v1/demo_jwt_auth/: auth_helpers.py  crud.py  jwt_auth.py
api_v1/products/: crud.py  dependecies.py  schemas.py  views.py
api_v1/users/: crud.py  schemas.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  base.py  db_helpers.py  model_mixins.py  order.py  order_product.py  post.py  product.py  profile.py  user.py
users/: schemas.py
